@@ -1,3 +1,8 @@
+2004-12-20  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>
+
+	* index.php: 
+	Added banner against software patents.
+
 2004-12-07  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>
 
 	* All php related files:
